Fixed Shutting Down Server, Added Translation Support, And Added Ability to Build And Run Jar

--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,14 @@ dependencies {
 
 }
 
+jar {
+    manifest {
+        attributes(
+            'Main-Class': 'me.alexisevelyn.crewmate.Main'
+        )
+    }
+}
+
 test {
     useJUnitPlatform()
 }
