--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id "com.github.johnrengelman.shadow" version "6.1.0"
 }
 
 group 'me.alexisevelyn'
@@ -10,8 +11,21 @@ repositories {
 }
 
 dependencies {
+    // License Compatibility - https://opensource.stackexchange.com/a/7908/9726
+    // License (Dual Licensed Under EPL v1.0 and LGPL 2.1) - https://logback.qos.ch/license.html
+    implementation "ch.qos.logback:logback-core:${project.logback_version}"
+    shadow "ch.qos.logback:logback-core:${project.logback_version}"
 
+    // License (Identical to MIT) - http://slf4j.org/license.html
+    implementation "org.slf4j:slf4j-api:${project.slf4j_api_version}"
+    shadow "org.slf4j:slf4j-api:${project.slf4j_api_version}"
 }
+
+//shadowJar {
+//    archiveBaseName.set('shadow')
+//    archiveClassifier.set('')
+//    archiveVersion.set('')
+//}
 
 jar {
     manifest {
