--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,10 @@ dependencies {
     // License (Identical to MIT) - http://slf4j.org/license.html
     implementation "org.slf4j:slf4j-api:${project.slf4j_api_version}"
     shadow "org.slf4j:slf4j-api:${project.slf4j_api_version}"
+
+    // License (MIT) - https://github.com/luaj/luaj/blob/master/LICENSE
+    implementation "org.luaj:luaj-jse:${project.luaj_version}"
+    shadow "org.luaj:luaj-jse:${project.luaj_version}"
 }
 
 //shadowJar {
