--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ plugins {
 }
 
 group 'me.alexisevelyn'
-version '0.0.2-SNAPSHOT'
+version '0.0.3-SNAPSHOT'
 
 repositories {
     mavenCentral()
@@ -23,6 +23,9 @@ dependencies {
     // License (MIT) - https://github.com/luaj/luaj/blob/master/LICENSE
     implementation "org.luaj:luaj-jse:${project.luaj_version}"
     shadow "org.luaj:luaj-jse:${project.luaj_version}"
+
+    // License (Apache 2.0) - https://github.com/JetBrains/java-annotations/blob/master/LICENSE.txt
+    implementation "org.jetbrains:annotations:${project.jetbrains_annotations_version}"
 }
 
 //shadowJar {
