--- a/gradle.properties
+++ b/gradle.properties
@@ -3,3 +3,4 @@ slf4j_api_version = 2.0.0-alpha1
 luaj_version = 3.0.1
 jetbrains_annotations_version = 16.0.2
 apache_mina_sshd_version = 2.5.1
+jline_version = 3.16.0
