--- a/build.gradle
+++ b/build.gradle
@@ -39,9 +39,9 @@ dependencies {
     implementation "org.apache.sshd:sshd-core:${project.apache_mina_sshd_version}"
     shadow "org.apache.sshd:sshd-core:${project.apache_mina_sshd_version}"
 
-    // Licence - https://github.com/stleary/JSON-java/blob/master/LICENSE
-    implementation "org.json:json:20200518"
-    shadow "org.json:json:20200518"
+    // Licence (Crockford MIT - aka the no evil license) - https://github.com/stleary/JSON-java/blob/master/LICENSE
+    implementation "org.json:json:${project.json_version}"
+    shadow "org.json:json:${project.json_version}"
 
     // License (BSD-3) - https://github.com/jline/jline3/blob/master/LICENSE.txt
     // Requires License In Binary Distribution - Can Be Found in `META-INF/licenses/jline3-license.txt`
@@ -50,7 +50,7 @@ dependencies {
 }
 
 // Configure Auto Relocation
-import com.github.jengelman.gradle.plugins.shadow.tasks.ConfigureShadowRelocation
+//import com.github.jengelman.gradle.plugins.shadow.tasks.ConfigureShadowRelocation
 
 //shadowJar {
 //    archiveBaseName.set('shadow')
