--- a/build.gradle
+++ b/build.gradle
@@ -47,6 +47,14 @@ dependencies {
     // Requires License In Binary Distribution - Can Be Found in `META-INF/licenses/jline3-license.txt`
     implementation "org.jline:jline:${project.jline_version}"
     shadow "org.jline:jline:${project.jline_version}"
+
+    // JUnit API
+    // License (EPL-2.0) - https://github.com/junit-team/junit5/blob/main/LICENSE.md
+    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: "${project.junit_version}"
+
+    // JUnit Engine
+    // License (EPL-2.0) - https://github.com/junit-team/junit5/blob/main/LICENSE.md
+    testRuntime group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: "${project.junit_version}"
 }
 
 // Configure Auto Relocation
@@ -85,7 +93,9 @@ processResources {
 }
 
 test {
-    useJUnitPlatform()
+    useJUnitPlatform() // For JUnit 5 - JUnit 4 was just useJUnit()
+
+    maxHeapSize = '1G'
 }
 
 // Currently None of the libraries appear to use a standard for machine license reading
