--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,23 @@
+# https://mvnrepository.com/artifact/ch.qos.logback/logback-classic
 logback_version = 1.3.0-alpha5
+
+# https://mvnrepository.com/artifact/org.slf4j/slf4j-api
 slf4j_api_version = 2.0.0-alpha1
+
+# https://mvnrepository.com/artifact/org.luaj/luaj-jse
 luaj_version = 3.0.1
-jetbrains_annotations_version = 16.0.2
+
+# https://mvnrepository.com/artifact/org.jetbrains/annotations
+jetbrains_annotations_version = 20.1.0
+
+# https://mvnrepository.com/artifact/org.apache.sshd/sshd-core
 apache_mina_sshd_version = 2.5.1
+
+# https://mvnrepository.com/artifact/org.json/json
 json_version = 20200518
+
+# https://mvnrepository.com/artifact/org.jline/jline
 jline_version = 3.16.0
+
+# https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api
+junit_version = 5.7.0
