--- a/gradle.properties
+++ b/gradle.properties
@@ -21,3 +21,6 @@ jline_version = 3.16.0
 
 # https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api
 junit_version = 5.7.0
+
+# https://mvnrepository.com/artifact/org.apiguardian/apiguardian-api
+api_guardian_version = 1.1.0
