--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,11 @@ plugins {
 group 'me.alexisevelyn'
 version '0.0.5-SNAPSHOT'
 
+// https://discuss.gradle.org/t/sourcecompatibility-targetcompatibility-usage-reasons/25133/4
+// I have no idea how to tell which version is the minimal version that can compile this
+//sourceCompatibility = 1.8
+//targetCompatibility = 1.11
+
 repositories {
     mavenCentral()
 }
