--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -49,6 +49,13 @@ jobs:
       run: git checkout HEAD^2
       if: ${{ github.event_name == 'pull_request' }}
 
+    # Install Specific Java Version
+    - uses: actions/setup-java@v1
+      with:
+        java-version: '11.0.3' # The JDK version to make available on the path. - https://static.azul.com/zulu/bin/
+        java-package: jdk # (jre, jdk, or jdk+fx) - defaults to jdk
+        architecture: x64 # (x64 or x86) - defaults to x64
+
     # Initializes the CodeQL tools for scanning.
     - name: Initialize CodeQL
       uses: github/codeql-action/init@v1
