--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,5 @@
+server_version = 0.0.7-SNAPSHOT
+
 # https://mvnrepository.com/artifact/ch.qos.logback/logback-classic
 logback_version = 1.3.0-alpha5
 
