--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -64,16 +64,16 @@ jobs:
 
     - name: Build Only
       if: ${{ !startsWith(env.ENABLE_PUBLISHING, 'publishing_enabled') }}
-      run: ./gradlew build -g build/.gradle
+      run: ./gradlew shadowJar -g build/.gradle
       env:
         IS_CI_BUILD: ${{ secrets.IS_CI_BUILD }}
 
     - name: Build And Publish To Sonatype
       if: startsWith(env.ENABLE_PUBLISHING, 'publishing_enabled')
-      run: ./gradlew publish -g build/.gradle
+      run: ./gradlew clean shadowJar publish -g build/.gradle
       env:
-        BINTRAY_GPG_KEY: ${{ secrets.BINTRAY_GPG_KEY }}
-        BINTRAY_GPG_PASSWORD: ${{ secrets.BINTRAY_GPG_PASSWORD }}
+        SONATYPE_GPG_KEY: ${{ secrets.SONATYPE_GPG_KEY }}
+        SONATYPE_GPG_PASSWORD: ${{ secrets.SONATYPE_GPG_PASSWORD }}
         SONATYPE_USERNAME: ${{ secrets.SONATYPE_USERNAME }}
         SONATYPE_PASSWORD: ${{ secrets.SONATYPE_PASSWORD }}
         IS_CI_BUILD: ${{ secrets.IS_CI_BUILD }}
@@ -133,7 +133,7 @@ jobs:
         SONATYPE_PASSWORD: ${{ secrets.SONATYPE_PASSWORD }}
         IS_CI_BUILD: ${{ secrets.IS_CI_BUILD }}
 
-    - name: Alert Discord to New RandomTech Release # Alternate Options are 4915330 and 139. I like 4915330 better, so I may switch at a future point
+    - name: Alert Discord to New Crewmate Release # Alternate Options are 4915330 and 139. I like 4915330 better, so I may switch at a future point
       if: startsWith(env.SERVER_RELEASE, 'true') && startsWith(env.ENABLE_PUBLISHING, 'publishing_enabled')
       continue-on-error: true
       run: |
