--- a/gradle.properties
+++ b/gradle.properties
@@ -26,3 +26,6 @@ junit_version = 5.7.0
 
 # https://mvnrepository.com/artifact/org.apiguardian/apiguardian-api
 api_guardian_version = 1.1.0
+
+# https://mvnrepository.com/artifact/com.google.code.findbugs/jsr305
+spotbugs_jsr_version = 3.0.2
