Got Spotbugs Working For Codacy. Wants to Throw A Non-Zero Error, So, Marking For Ignoring As I'm Not Using Spotbugs For a Make Or Break Build Tool.

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -135,6 +135,7 @@ jobs:
 
     - name: Spotbugs Analysis
       uses: codacy/codacy-analysis-cli-action@master
+      continue-on-error: true
       with:
         tool: spotbugs
         allow-network: true
