--- a/gradle.properties
+++ b/gradle.properties
@@ -29,3 +29,6 @@ api_guardian_version = 1.1.0
 
 # https://mvnrepository.com/artifact/com.google.code.findbugs/jsr305
 spotbugs_jsr_version = 3.0.2
+
+# https://search.maven.org/artifact/com.h3xstream.findsecbugs/findsecbugs-plugin
+spotbugs_detectors_version = 1.11.0
