Added Lazy Byte Merger

--- a/gradles/plugins.gradle
+++ b/gradles/plugins.gradle
@@ -1,2 +1,2 @@
 // Include Source Set For Example Plugin
-apply from: "gradles/example-plugin.gradle"
+apply from: "gradles/plugins/example-plugin.gradle"
