--- a/gradles/dependencies.gradle
+++ b/gradles/dependencies.gradle
@@ -35,6 +35,7 @@ dependencies {
     // License (MIT) - https://github.com/alexis-evelyn/Crewmate/blob/master/LICENSE.md
     // My Own Library - So, No Need For Special License Requirements
     implementation project(":annotation-processor")
+    annotationProcessor project(":annotation-processor")
 }
 
 // Annotations
